fixed hero on mobile

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -72,9 +72,9 @@ p,.p{
   margin: 1.2rem 0;
 }
 .hero{
-  @include font-size(3);
+  @include font-size(2);
   line-height: 1.3em;
-  letter-spacing: .05em;
+  letter-spacing: .02em;
   margin-top: 4rem;
   font-weight: lighter;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
